# TANGO2

./: .gitignore  LICENSE.md  LICENSE_ko.md  README.md
VisionLanguageModel/: README.md  debug_dataset.py  load_test.py  pyproject.toml  requirements.txt  setup_env.sh  test.py  test_forward.py  train.py
VisionLanguageModel/api/: .dockerignore  ACRYL-REVIEW-CHECKLIST.md  API_SCHEMA.md  Dockerfile  app.py  model_manager.py  requirements.txt  schemas.py  train_manager.py
VisionLanguageModel/api/.omc/state/: agent-replay-813eec7a-be92-4ed4-8c1a-23c7a7c94dd4.jsonl  subagent-tracking.json
VisionLanguageModel/api/ETRI-SDS-VLM-attachments/: 00-README.md  01-SDS-VLM-detail-for-ETRI.md  02-errors.yaml
VisionLanguageModel/data/: __init__.py  sds_gaa_ko.json
VisionLanguageModel/eva/: assemble_model.py  test.py  train.py
VisionLanguageModel/gaa/: __init__.py  geometric_loss.py
VisionLanguageModel/helm_chart/: values.yaml
VisionLanguageModel/helm_chart/templates/: deployment.yaml
VisionLanguageModel/llava/model/: builder.py  llava_arch.py
VisionLanguageModel/llava/model/language_model/: llava_llama.py
VisionLanguageModel/llava/train/: llava_trainer.py  train.py
VisionLanguageModel/llava_custom/: constants.py
VisionLanguageModel/llava_custom/data/: dataset.py
VisionLanguageModel/llava_custom/model/: builder.py
VisionLanguageModel/llava_custom/train/: train.py
VisionLanguageModel/model/: vision_encoder.py
VisionLanguageModel/scripts/: inference.py  train.sh  train_70b_a100_projector.sh  train_8b_5090_lora.sh  train_8b_5090_projector.sh  train_custom.sh  train_lora_marine.sh  train_lora_sds.sh  zero3.json
(+6225 files in other folders)
