[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy==1.26.4",
    "torch==2.8.0",
    "torchvision",
    "transformers==4.51.2",
    "tokenizers",
    "sentencepiece==0.1.99",
    "shortuuid",
    "accelerate==0.26.0",
    "peft==0.14.0",
    "bitsandbytes",
    "pydantic",
    "markdown2[all]",
    "scikit-learn==1.2.2",
    "gradio==5.49.1",
    "gradio_client",
    "pandas",
    "webdataset",
    "requests",
    "httpx",
    "uvicorn",
    "fastapi",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.9.10",
    "evaluate",
    "protobuf==3.20",
    "opencv-python",
    "deepspeed==0.15.0",
    "ninja",
    "wandb",
    "moviepy==1.0.3",
    "openai",
    "trl==0.11.4",
    "matplotlib",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
